--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tic-tac1",
+  "name": "tic-tac",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -39,5 +39,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/node-sass": "^4.11.7",
+    "node-sass": "^9.0.0",
+    "sass": "^1.69.5"
   }
 }
